--- a/toplogo_loggedin_s3.html
+++ b/toplogo_loggedin_s3.html
@@ -55,6 +55,22 @@ $(document).ready(function () {
 <li><a href="http://searchmobius.org">MOBIUS</a></li>
 <li><a href="/search/k">Help</a></li>
 <li><a href="http://library.semo.edu/">Library Home</a></li>
+
+<li>
+<!-- Place this div in your web page where you want your chat widget to appear. -->
+<div class="needs-js">
+ JavaScript disabled or chat unavailable.
+</div>
+<!-- Place this script as near to the end of your BODY as possible. -->
+<script type="text/javascript">
+ (function() {
+   var x = document.createElement("script"); x.type = "text/javascript"; x.async = true;
+   x.src = (document.location.protocol === "https:" ? "https://" : "http://") + "libraryh3lp.com/js/libraryh3lp.js?1364"
+   var y = document.getElementsByTagName("script")[0]; y.parentNode.insertBefore(x, y);
+ })();
+</script>
+</li>
+
 </ul>	
 
 </div>
