--- a/mainmenu.html
+++ b/mainmenu.html
@@ -22,6 +22,8 @@
 
 <script type="text/javascript" src="/screens/jquery.cookie.js"></script>
 
+<script type="text/javascript" src="/screens/domainredirect.js"></script>
+
 <script type="text/javascript" src="/screens/mobileredirect.js"></script>
 
 
