--- a/toplogo_s3.html
+++ b/toplogo_s3.html
@@ -26,28 +26,11 @@ $(document).ready(function () {
 <div class="fullPage">
 
 <div id="skipNav"><a href="#content" tabindex="1">Skip to content</a></div>
-<div class="topLogo">
-
-<div class="topLogoImage">
-<a href="/search" tabindex="10"><img src="/screens/semo.jpg" alt="Southeast Missouri State University"></a>
-</div>
-
-<div class="clusterLogo">
-<a href="/" tabindex="10"><img src="/screens/galahad.png" alt="Galahad"></a>
-</div>
-
-</div><!--topLogo-->
-
-<div class="linkBanner">
-
+<div class="navTop">
 <div class="navRight">
 <ul>
 <li><a href="/patroninfo">My Library Account</a></li>
-<li><a href="/search/j">Course Reserves</a></li>
-<li><a href="http://searchmobius.org">MOBIUS</a></li>
-<li><a href="/search/k">Help</a></li>
-<li><a href="http://library.semo.edu/">Library Home</a></li>
-
+<li><a>Hours</a></li>
 <li>
 <!-- Place this div in your web page where you want your chat widget to appear. -->
 <div class="needs-js">
@@ -62,9 +45,38 @@ $(document).ready(function () {
  })();
 </script>
 </li>
+</ul>
+</div>
+</div>
+<div class="topLogo">
 
+
+
+<div class="topLogoImage">
+<a href="/search" tabindex="10"><img src="/screens/kent.png" alt="Kent Library Catalog"></a>
+</div>
+
+<div class="clusterLogo">
+<a href="/" tabindex="10"><img src="/screens/semo.png" alt="Southeast Missouri State University"></a>
+</div>
+
+</div><!--topLogo-->
+
+<div class="linkBanner">
+
+<div class="navLeft">
+<ul>
+<li><a href="http://library.semo.edu/">Library Home</a></li>
+<li><a href="/search/j">Course Reserves</a></li>
+<li><a href="/search/k">Help</a></li>
 </ul>	
+</div>
 
+<div class="navRight">
+<ul>
+<li><a href="/">Galahad</a></li>
+<li><a href="http://searchmobius.org">MOBIUS</a></li>
+</ul>	
 </div>
 
 
