--- a/botlogo_s1.html
+++ b/botlogo_s1.html
@@ -62,5 +62,63 @@ if (chgTitle == 1) { document.title = lib_or_cat_name + title_suff + "'" + rrFor
 }
 //-->
 </script>
+
+<script type='text/javascript'>
+    var ProcessResults = function(bookInfo) {
+        var buttonImg = "<img src='/screens/googlebutton.gif' alt='Google Preview'>"
+        var textGBS = "";
+        for (ISBN in bookInfo) {
+            var b = bookInfo[1401302203];
+            var bookJacket =  "<img src='" + b.thumbnail_url + "&zoom=1'>";
+            //form the text of Google Book contents
+            if (b && (b.preview == "full")) {
+                textGBS = "<p>Full Text</p>";
+                //"Google Book Search";
+                $(".googlebooks").html(bookJacket + "<a href='" + b.preview_url + "'>" + buttonImg + "</a>")
+            }
+            else if (b && (b.preview == "partial")) {
+                textGBS = "<p>Limited Preview</p>"
+                //"Preview at Google Book Search";
+		$(".googlebooks").html(bookJacket + "<a href='" + b.preview_url + "'>" + buttonImg + "</a>")
+            }
+            else if (b && (b.preview == "noview")) {
+                //"Preview at Google Book Search";
+                if (b.thumbnail_url != undefined){
+		
+                $(".googlebooks").html(bookJacket + "<a href='" + b.preview_url + "'>" + buttonImg + "</a>")
+                }
+            }
+            else {
+                //document.getElementById("googlebooks").innerHTML = "None available.";
+            }
+    }
+}
+
+</script>
+
+<script type='text/javascript'>
+
+var ISBN = new Array();
+
+$(".googlebooks").each(function(index) {
+    
+    ISBN.push($(".googlebooks:eq(" + index + ")").html().replace(/[^0123456789]/g,""));
+
+});
+var ISBNlist = ISBN.join();
+
+var cburl = "http://books.google.com/books";
+// Retrieve the info for these bibkeys
+
+var api_url = cburl + "?jscmd=viewapi&bibkeys=ISBN:" + ISBNlist;
+var s = document.createElement("script");
+s.setAttribute("type", "text/javascript");
+//alert("searching for: " + ISBN);
+s.setAttribute("src", "http://books.google.com/books?jscmd=viewapi&bibkeys=ISBN:" + ISBNlist + "&callback=ProcessResults");
+document.documentElement.firstChild.appendChild(s);
+
+</script>
+<!-- end botlogo.html file -->
+
 <link rel="shortcut icon" type="ximage/icon" href="/screens/mac.ico" />
 <!-- end botlogo.html file -->
