--- a/toplogo_loggedin_s3.html
+++ b/toplogo_loggedin_s3.html
@@ -17,7 +17,7 @@ $(document).ready(function () {
     	//$("#exampleText").load("screens/" + this.value + ".inc");
 	//});
 	//Changes the search examples
-	$('#b option:not([value^="t"])').hide(); //Hides the out-of-scope locations
+	$('#b option:not([value^="s"])').hide(); //Hides the out-of-scope locations
 	$('#b option[value=""]').show(); //Shows the any location for the scopes
 });
 </script>
