--- a/toplogo_s1.html
+++ b/toplogo_s1.html
@@ -16,8 +16,11 @@ $(document).ready(function () {
     	//$("#exampleText").load("/screens/" + this.value + ".inc");
 	//});
 	//Changes the search examples
-	$('#b option:not([value^="m"])').hide(); //Hides the out-of-scope locations
-	$('#b option[value=""]').show(); //Shows the any location for the scopes
+	
+	var selectAny = $('#b option[value=""]')
+	$('#b option:not([value^="m"])').detach(); 
+	selectAny.prependTo("#b")
+	//Hides the out-of-scope locations
 });
 </script>
 
