--- a/toplogo_s1.html
+++ b/toplogo_s1.html
@@ -48,7 +48,7 @@ if (document.body){document.body.className = "bodybg";}
 <a href="/" tabindex="10"><img src="/screens/galahad.png" alt="Galahad"></a>
 </div>
 
-<div id="alertMessage"></div>
+<div id="alertMessage">The catalog will be offline beginning at 9:00 a.m. on Friday, November 1.  Expected downtime is 4-6 hours.</div>
 
 </div><!--topLogo-->
 
