--- a/toplogo_loggedin_s3.html
+++ b/toplogo_loggedin_s3.html
@@ -108,6 +108,7 @@ if (document.body){document.body.className = "bodybg";}
 </li>
 <li><a href="/search/d">Subject (LC)</a></li>
 <li><a href="/search/m">Children's Subject</a></li>
+<li><a href="/search/j">Genre</a></li>
 <li><a href="/search/q">Author and Title</a></li>
 </ul>
         
