--- a/toplogo_loggedin_s1.html
+++ b/toplogo_loggedin_s1.html
@@ -38,7 +38,7 @@ if (document.body){document.body.className = "bodybg";}
 <div class="topLogo">
 
 <div class="topLogoImage">
-<a href="/search/" tabindex="10"><img src="/screens/mac.png" alt="Mineral Area College"></a>
+<a href="/search/" tabindex="10"><img src="/screens/mac.jpg" alt="Mineral Area College"></a>
 </div>
 
 <div class="macLogo">
