--- a/botlogo_s1.html
+++ b/botlogo_s1.html
@@ -118,7 +118,18 @@ s.setAttribute("src", "http://books.google.com/books?jscmd=viewapi&bibkeys=ISBN:
 document.documentElement.firstChild.appendChild(s);
 
 </script>
-<!-- end botlogo.html file -->
-
 <link rel="shortcut icon" type="ximage/icon" href="/screens/macicon.ico" />
+
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-16157841-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
+
+
 <!-- end botlogo.html file -->
