--- a/toplogo_s1.html
+++ b/toplogo_s1.html
@@ -21,6 +21,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <script type="text/javascript" src="/screens/856links.js"></script>
 <script src="/screens/menu-collapsed.js" type="text/javascript"></script>
 <script type="text/javascript" src='/screens/sms.js'> </script>
+<script type="text/javascript" src="/screens/tabs_X.js"></script>
 <script type="text/javascript">
 $(document).ready(function () {
 	$("span:contains(WebPAC PRO)").hide(); //Hide the iii footer
@@ -109,7 +110,20 @@ if (document.body){document.body.className = "bodybg";}
 <li><a href="/search/m">Children's Subject</a></li>
 <li><a href="/search/q">Author and Title</a></li>
 </ul>
-        
+<div class="needs-js">chat loading...</div>
+<!-- Place this script as near to the end of your BODY as possible. -->
+<script type="text/javascript">
+
+(function() {
+
+var x = document.createElement("script"); x.type = "text/javascript";
+x.async = true;
+x.src = (document.location.protocol === "https:" ? "https://" : "http://")
++ "us.libraryh3lp.com/js/libraryh3lp.js?8303";
+var y = document.getElementsByTagName("script")[0];
+y.parentNode.insertBefore(x, y);
+})();
+</script></p>        
 </div>
 <div class="pageContentColumn"><!-- content container -->
 <a name="content" id="content"></a>
